devops-platform/k8s/jenkins/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: jenkins-ui
  namespace: jenkins-prod
  labels:
    app.kubernetes.io/name: jenkins
    app.kubernetes.io/component: ui
  annotations:
    cloud.google.com/backend-config: '{"default": "jenkins-backendconfig"}'
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: jenkins
    app.kubernetes.io/component: controller
  ports:
    - name: http
      port: 8080
      targetPort: 8080
      protocol: TCP
---
apiVersion: v1
kind: Service
metadata:
  name: jenkins-jnlp
  namespace: jenkins-prod
  labels:
    app.kubernetes.io/name: jenkins
    app.kubernetes.io/component: jnlp
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: jenkins
    app.kubernetes.io/component: controller
  ports:
    - name: jnlp
      port: 50000
      targetPort: 50000
      protocol: TCP
